# persisted-query-to-rest

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENCE-MIT  README.md  RELEASING.md  example_config.yaml  knope.toml
.github/: CODEOWNERS
.github/workflows/: docker-build.yml  release.yml  rust-checks.yml
config/: config.rs
example/: README.md  config-schema.json  config-schema.sh  config.yml  start.sh
src/: handler.rs  main.rs
src/config/: mod.rs
src/graphql_request/: mod.rs
