[package]
name = "persisted-query-to-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = {version="1.0.209", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = {version = "1.39.2" , features = ["rt-multi-thread"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

