[package]
name = "persisted-query-to-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["query"] }
axum-extra = { version = "0.9.3", features = ["query"] }
axum-macros = "0.4.1"
clap = { version = "4.5.16", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
schemars = { version = "0.8.16", features = ["url"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["raw_value"] }
serde_yaml = "0.9.34"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
