[package]
name = "persisted-query-to-rest"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/apollosolutions/persisted-query-to-rest"
description = "A service that converts persisted GraphQL queries to REST endpoints"

[dependencies]
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", features = ["query"] }
axum-macros = "0.4.1"
clap = { version = "4.5.16", features = ["derive"] }
http = "1.1.0"
reqwest = { version = "0.12.7", features = [
    "json",
    "gzip",
    "stream",
    "brotli",
] }
schemars = { version = "0.8.16", features = ["url"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["raw_value"] }
serde_yaml = "0.9.34"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
mockito = "1.5.0"
